Fixed issue with header on mobile display

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -55,13 +55,13 @@ header {
 }
 
 .header-info {
-    grid-column: 2;
     background-color: white;
     padding: 30px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     position: relative;
     margin-top: 20px;
+    min-width: 250px;
     max-width: 450px;
 }
 
@@ -86,6 +86,7 @@ header {
 
 .header-links img {
     width: 24px;
+    cursor: pointer;
 }
 
 main {
@@ -266,6 +267,14 @@ footer > img {
 
 /* Tablet design */
 @media (max-width: 1024px) and (min-width: 769px) {
+    .header-background {
+        height: 350px;
+    }
+
+    header {
+        padding: 40px 30px 0;
+    }
+
     main {
         padding: var(--spacing-medium);
     }
@@ -292,12 +301,23 @@ footer > img {
 
 /* Mobile design */
 @media (max-width: 768px) {
+    .header-background {
+        height: 500px;
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 40px), 0 100%);
+    }
+
     header {
         margin: 20px;
     }
 
     .header-content {
         flex-direction: column;
+    }
+
+    .header-content > img {
+        width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
     }
 
     .header-info {
